checkout connected to paypal

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script
+    src="https://www.paypal.com/sdk/js?client-id=AcEbZrMDnoS6xg1z0kZThwgpQor8Q5oSNVVqadG6vQ87oQB6MI34Kbc95ykPIaeMy7iDwjdkPDF7y568&currency=CAD"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
+  </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
